# statrs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.lock.MSRV  Cargo.toml  Makefile.toml  README.md  RELEASING.md  katex-header.html
.github/workflows/: autofix-ci.yml  coverage.yml  release-plz.yml  test.yml
benches/: density.rs  order_statistics.rs
examples/: error_trials.rs  random_clap.rs
src/: consts.rs  error.rs  generate.rs  lib.rs  prec.rs
src/density/: kde.rs  knn.rs  mod.rs
src/distribution/: bernoulli.rs  beta.rs  binomial.rs  categorical.rs  cauchy.rs  chi.rs  chi_squared.rs  dirac.rs  dirichlet.rs  discrete_uniform.rs  empirical.rs  erlang.rs  exponential.rs  fisher_snedecor.rs  gamma.rs  geometric.rs  gumbel.rs  hypergeometric.rs  ideal_soliton.rs  internal.rs  inverse_gamma.rs  inverse_wishart.rs  laplace.rs  levy.rs  log_normal.rs  logistic.rs  mod.rs  multinomial.rs  multivariate_normal.rs  multivariate_normal_diag.rs  multivariate_students_t.rs  multivariate_uniform.rs  negative_binomial.rs  noncentral_students_t.rs  normal.rs  pareto.rs  poisson.rs  robust_soliton.rs  students_t.rs  triangular.rs  (+4 more)
src/function/: beta.rs  erf.rs  evaluate.rs  exponential.rs  factorial.rs  gamma.rs  harmonic.rs  kernel.rs  logistic.rs  mod.rs  stable.rs
src/statistics/: accumulate.rs  iter_statistics.rs  mod.rs  online.rs  order_statistics.rs  slice_statistics.rs  statistics.rs  traits.rs
src/stats_tests/: anderson_darling.rs  chisquare.rs  f_oneway.rs  fisher.rs  ks_test.rs  mannwhitneyu.rs  mod.rs  skewtest.rs  ttest_onesample.rs
tests/: nist_tests.rs
tests/no_std/: Cargo.toml
tests/no_std/src/: lib.rs
